fixed the z-index of the header and swiperjs

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -46,6 +46,7 @@ body {
   transition: all 0.5s;
 }
 .nav__black {
+  z-index: 1000;
   // background-color: #000000;
   background: rgb(0, 0, 0, 0.7);
   // background: transparent;
